[workspace]
resolver = "3"
members = [
	"rust-libretro-sys",
]

default-members = [
	"rust-libretro-sys"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 8
rpath = false
